<resources>
    <string name="app_name">Restaurant</string>
    <string name="xyz_hotel">XYZ Hotel!</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="south_indian">South Indian</string>
    <string name="north_indian">North Indian</string>
    <string name="go">Go!</string>
    <string name="indian">Indian</string>
    <string name="arabian">Arabian</string>
    <string name="price">\t₹ %1$d /-</string>
    <string name="serialno">%1$d .</string>
</resources>
